# cgcnn

./: CLAUDE.md  README.md  TUNING_README.md  main.py  predict.py  pyproject.toml  regressor.md  summary.md
.github/instructions/: Use Python through `uv`.instructions.md
scripts/: tune.py  tune_cif_nh2.py  tune_cif_nh2_v2.py  tune_cif_nh2_v3.py
src/cgcnn/: __init__.py  benchmark.py  data.py  inference.py  model.py  process_cleanup.py  training.py  utils.py
src/cgcnn/tools/: __init__.py  staged.py  thresholds.py  transforms.py
tests/: test_multiclass_top_bin_pipeline.py  test_process_cleanup.py
tools/: analyze_magnetization_outliers.py  analyze_parity.py  evaluate_epoch_checkpoints.py  evaluate_model_split.py  generate_epoch_parity_plots.py  plot_linked_parity_plotly.py  plot_magnetization_volume_distribution.py  plot_top_bin_regressor_epoch_parity.py  prepare_and_train_magnetization.py  resume_training.py  train_magnetization_multiclass_top_bin.py  train_magnetization_positive_only.py  train_magnetization_threshold_split.py  train_magnetization_two_stage.py
