[project]
name = "cgcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "singularitti", email = "singularitti@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "pymatgen>=2025.10.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]

[project.scripts]
cgcnn = "cgcnn:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]
