[project]
name = "cgcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "singularitti", email = "singularitti@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2",
    "pymatgen>=2025",
    "pyyaml>=6",
    "scikit-learn>=1",
    "torch>=2",
]

[project.scripts]
cgcnn = "cgcnn:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=8",
]
